Added link to the postman collection

--- a/.wiki/06.endpoints.md
+++ b/.wiki/06.endpoints.md
@@ -1,5 +1,7 @@
 ## Document Management Endpoints
 
+For convenience, it is included a [Postman Collection](../.postman/kdoc.postman_collection.json) with all the available REST endpoints.
+
 * Delete all documents:
 
 ```
