Added support to download as a zip all documents associated to a group.

--- a/.wiki/02.download.md
+++ b/.wiki/02.download.md
@@ -7,7 +7,8 @@
 
 #### Process
 1. **Client Request**:
-   - The client requests a signed URL by providing the document's UUID (`document_id`).
+   - The client requests a signed URL by providing the document's UUID (`document_id`),
+     or the group's UUID (`group_id`) to download all documents associated with a group.
 
 2. **Server Audit**:
    - The server audits the request for generating a signed URL.
@@ -33,7 +34,7 @@ https://server.com/download?token=<encryptedToken>&signature=<hmacSignature>
 #### Process
 
 1. **Client Request**:
-    - The client uses the signed URL to request the document download.
+   - The client uses the signed URL to request the document(s) download.
 
 2. **Server Audit**:
     - The server audits the download request.
@@ -44,14 +45,14 @@ https://server.com/download?token=<encryptedToken>&signature=<hmacSignature>
         - The server audits a log of the failed attempt.
         - The server responds with a `403 Forbidden` status.
     - If verification succeeds:
-        - The server retrieves the document ID from the decrypted token.
+       - The server retrieves the document ID (or group ID) from the decrypted token.
 
 4. **Document Retrieval**:
-    - The server fetches the document file reference using the document ID.
+   - The server fetches the document file(s) reference using the document ID (or group ID if applicable).
     - If the document is not found, the server responds with a `404 Not Found` status.
 
 5. **File Streaming**:
-    - If the document is found, the server prepares to stream the document file to the client.
+   - If the document(s) is found, the server prepares to stream the document file to the client.
     - The server sets the appropriate response headers to indicate a file download.
     - The server streams the document file, deciphering it if necessary.
 
