--- a/.wiki/06.endpoints.md
+++ b/.wiki/06.endpoints.md
@@ -45,10 +45,10 @@ DELETE /v1/document/{document_id}/{document_id}
 POST /v1/document/{owner_id}/{group_id}/{type}/{cipher}
 ```
 
-* Generate the signed URL for a document download:
+* Generate the signed URL for a document download. Either the document_id or the group_id must be provided:
 
 ```
-GET /v1/document/{document_id}/url
+GET /v1/document/url?{document_id}&{group_id}
 ```
 
 * Downloads a backup file containing all the documents:
