--- a/.wiki/01.upload.md
+++ b/.wiki/01.upload.md
@@ -10,8 +10,8 @@
 
 2. **Parameter Parsing**:
     - The server parses the query parameters from the URL:
-        - `owner_id`: UUID of the document owner. (Mandatory)
-        - `group_id`: UUID of the group to associate the document with. (Optional)
+        - `owner_id`: Id of the document owner. (Mandatory)
+        - `group_id`: Id of the group to associate the document with. (Optional)
         - `type`: Type of the document. (Mandatory)
         - `cipher`: Boolean indicating whether the document should be encrypted. (Optional, default: `true`)
 
