--- a/.wiki/02.download.md
+++ b/.wiki/02.download.md
@@ -7,8 +7,8 @@
 
 #### Process
 1. **Client Request**:
-    - The client requests a signed URL by providing the document's Id (`document_id`),
-      or the group's Id (`group_id`) to download all documents associated with a group.
+   - The client requests a signed URL by providing the document's ID (`document_id`),
+     or the group's ID (`group_id`) to download all documents associated with a group.
 
 2. **Server Audit**:
    - The server audits the request for generating a signed URL.
